plugins {
    id 'fabric-loom' version '0.10-SNAPSHOT'
    id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
    accessWidenerPath = file("src/main/resources/bewitchment.accesswidener")
}

repositories {
    maven {
        name "cardinal components, impersonate, player ability lib, trinkets"
        url "https://ladysnake.jfrog.io/artifactory/mods"
        content {
            includeGroup 'io.github.ladysnake'
            includeGroupByRegex 'io\\.github\\.onyxstudios.*'
        }
    }
    maven {
        name "reach entity attributes"
        url "https://maven.jamieswhiteshirt.com/libs-release"
        content {
            includeGroup "com.jamieswhiteshirt"
        }
    }
    maven {
        name "terraform wood api, trinkets"
        url "https://maven.terraformersmc.com"
    }
    maven {
        name "cloth config, rei"
        url "https://maven.shedaniel.me"
    }
    maven {
        name "impersonate"
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven {
        name "patchouli"
        url "https://maven.blamejared.com"
    }
    maven {
        name "appleskin"
        url "https://maven.ryanliptak.com/"
    }
    maven {
        name "fall flying lib"
        url "https://maven.cafeteria.dev"
        content {
            includeGroup 'net.adriantodt.fabricmc'
        }
    }
    maven {
        name "flan"
        url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
    }
    maven {
        name "mod menu"
        url "https://api.modrinth.com/maven"
    }
    maven {
        name "jitpack"
        url "https://jitpack.io"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${cardinal_components_version}"
    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${cardinal_components_version}"
    modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:${cardinal_components_version}"
    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:${cardinal_components_version}"
    modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${reach_version}"
    include "com.jamieswhiteshirt:reach-entity-attributes:${reach_version}"
    modImplementation "com.github.emilyploszaj:step-height-entity-attribute:${step_height_version}"
    include "com.github.emilyploszaj:step-height-entity-attribute:${step_height_version}"
    modImplementation "com.terraformersmc.terraform-api:terraform-wood-api-v1:${terraform_wood_api_version}"
    include "com.terraformersmc.terraform-api:terraform-wood-api-v1:${terraform_wood_api_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modImplementation "io.github.ladysnake:impersonate:${impersonate_version}"
    modImplementation "vazkii.patchouli:Patchouli:${patchouli_version}"
    modImplementation("com.github.virtuoel:pehkui:${pehkui_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modImplementation "io.github.ladysnake:PlayerAbilityLib:${pal_version}"
    modImplementation "com.github.emilyalexandra:trinkets:${trinkets_version}"

//    modCompileOnly("squeek.appleskin:appleskin-fabric:${appleskin_version}:api") {
//        transitive = false
//    }
//    modRuntime("squeek.appleskin:appleskin-fabric:${appleskin_version}") {
//        exclude module: 'modmenu'
//    }
//    modImplementation("io.github.flemmli97:flan:${minecraft_version}-${flan_version}") {
//        transitive = false
//    }
//    modCompileOnly("io.github.flemmli97:flan:${minecraft_version}-${flan_version}:api") {
//        transitive = false
//    }
//    modRuntime("io.github.flemmli97:flan:${minecraft_version}-${flan_version}") {
//        transitive = false
//    }
    modCompileOnly "com.github.apace100:origins-fabric:${origins_version}"
    modRuntimeOnly "com.github.apace100:origins-fabric:${origins_version}"
    modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}
